--- a/camellia espresso/coffeesell.html
+++ b/camellia espresso/coffeesell.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Online Sell</title>
+    <link rel="stylesheet" type="text/css"  href="css/sell.css">
 </head>
 <body>
     
