Added navigation bar

--- a/camellia espresso/online.html
+++ b/camellia espresso/online.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <a class="home" href="index.html">Home</a>
-            <a class="n_o"href="online.html">Online Order</a>
+            <a class="n_o" href="index.html">Home</a>
+            <a class="home"href="online.html">Online Order</a>
             <a class="n_o"href="quiz.html">Quiz</a>
             <a class="n_o"href="About.html">About Us</a>
         </nav>
