--- a/camellia espresso/index.html
+++ b/camellia espresso/index.html
@@ -22,8 +22,8 @@
         <!--Here's the body part-->
         <div class="top">
             <div id="layer1" style="position: absolute; width: 426px; height: 275px; z-index: 1; left: 488px; top: 242px">
-				<strong>Camellia<br>Espresso</strong></div>
-			<img class="x" height="442" src="img/home_top.jpg" width="985">
+				<center><strong>Camellia<br>Espresso</strong></div></center>
+			<center><img class="x" height="442" src="img/home_top.jpg" width="985"></center>
         </div>
         
           <div class="gallery">
