After editing Hiruni's html/css

--- a/camellia espresso/index.html
+++ b/camellia espresso/index.html
@@ -7,11 +7,11 @@
     <title>Camellia Espresso</title>
     <link  rel="stylesheet" href="css/main.css">
 </head>
-<body background="img/home_bg2.jpg">
+<body background="img/bg3.jpg">
     
     <header>
         <nav class="navbar">
-            <a class="home" href="index.dwt">Home</a>
+            <a class="home" href="index.html">Home</a>
             <a class="n_o"href="online.html">Online Order</a>
             <a class="n_o"href="quiz.html">Quiz</a>
             <a class="n_o"href="About.html">About Us</a>
@@ -23,7 +23,7 @@
         <div class="top">
             <div id="layer1" style="position: absolute; width: 426px; height: 275px; z-index: 1; left: 488px; top: 242px">
 				<center><strong>Camellia<br>Espresso</strong></div></center>
-			<center><img class="x" height="442" src="img/home_top.jpg" width="985"></center>
+			<center><img class="x" height="442" src="img/bg.jpg" width="985"></center>
         </div>
         
           <div class="gallery">
