--- a/camellia espresso/online.html
+++ b/camellia espresso/online.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Online Purchase</title>
     <link  rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body id="online" background="img/bg4.jpg">
     <header>
         <nav class="navbar">
             <a class="n_o" href="index.html">Home</a>
@@ -17,9 +17,21 @@
         </nav>
      
     </header>
-    <main>
-        <!--Here's the body part-->
-    </main>
+    <content>
+
+            <div id="layer2">
+                    <center><strong>Camellia<br>Espresso</strong></div></center><br><br><br>
+                    <center><h3 style="font-size: 1cm "id="layer1">Online Order</h3></center>
+            </div>
+
+        <div class="gallery">
+            <a target="_blank" href="teasell.html">
+			  <img src="img/home_tea.jpg" alt="COFFEE" height="217" width="268"></a>
+          </div>
+          <div class="gallery">
+            <a target="_blank" href="coffeesell.html"><img src="img/home_coffee.jpg" alt="COFFEE"></a>
+          </div>
+    </content>
         
 </body>
 </html>
