--- a/camellia espresso/about.html
+++ b/camellia espresso/about.html
@@ -16,10 +16,8 @@
             <a class="home"href="About.html">About Us</a>
         </nav>
         
-    </header>
-    <main>
-        <!--Here's the body part-->
-    </main>
+    </header><br><br>
+    <center><h1><a href="php/index.php">Register Free !</a></h1></center>
         
 </body>
 </html>
