--- a/camellia espresso/online.html
+++ b/camellia espresso/online.html
@@ -7,7 +7,7 @@
     <title>Online Purchase</title>
     <link  rel="stylesheet" href="css/main.css">
 </head>
-<body id="online" background="img/bg4.jpg">
+<body id="online" background="img/spiral.gif">
     <header>
         <nav class="navbar">
             <a class="n_o" href="index.html">Home</a>
@@ -18,17 +18,16 @@
      
     </header>
     <content>
+             <div class="top">
+                                <div id="layer1" style="position: absolute; width: 426px; height: 275px; z-index: 1; left: 488px; top: 50px">
+                                    <center><strong>Camellia<br>Espresso</strong></div></center>
+                            </div><br><br><br>
 
-            <div id="layer2">
-                    <center><strong>Camellia<br>Espresso</strong></div></center><br><br><br>
-                    <center><h3 style="font-size: 1cm "id="layer1">Online Order</h3></center>
-            </div>
-
-        <div class="gallery">
+        <div class="gallery" style="padding-top: 150px; padding-left: 30px;">
             <a target="_blank" href="teasell.html">
 			  <img src="img/home_tea.jpg" alt="COFFEE" height="217" width="268"></a>
           </div>
-          <div class="gallery">
+          <div class="gallery" style="padding-top: 150px;">
             <a target="_blank" href="coffeesell.html"><img src="img/home_coffee.jpg" alt="COFFEE"></a>
           </div>
     </content>
