--- a/camellia espresso/teasell.html
+++ b/camellia espresso/teasell.html
@@ -51,7 +51,7 @@
          <a href="image link"><img src="img/green.jpg" alt="Green Tea"></a>
         <div class="container">
             <h4><b>Green Tea</b></h4><br>
-            <p>LKR1,713.00</p><br>
+            <p>LKR1,200.00 (100g)</p><br>
             <p class="font">Ceylon Green tea comes with 
                 a toasty character, delicate aroma and refreshing taste. Zesta Green Tea is also available as tea bags for 
                 your convenience and enjoyment.</p><br>
@@ -76,7 +76,7 @@
          <a href="image link"><img src="img/herbal.JPG" alt="Citrus Herbal Tea" ></a>
         <div class="container">
             <h4><b>Citrus Spice Herbal Tea</b></h4><br>
-            <p>LKR 3,500.00</p><br>
+            <p>LKR 2,500.00</p><br>
             <p class="font">Treat yourself to a lively and luscious blend of naturally caffeine free that combines premium herbs, spices and 
                 fruits with South African Rooibos..</p><br>
             <center><button>Purchase</button></center><br><br>
@@ -136,6 +136,19 @@
        
         </div> 
     </div>
+
+    <div class="card">
+            <a href="image-link"><img src="img/wt.jpg" alt="White Tea"></a>
+            
+                <div class="container">
+                    <h4><b>White Tea</b></h4><br>
+                    <p>LKR 6000.00 (50g)</p><br>
+                    <p class="font">White tea may refer to one of several styles of tea which generally feature young or minimally processed leaves of the Camellia sinensis plant.
+                    </p><br>
+                    <center><button>Purchase</button></center><br>
+                </div>
+    </div>
+
 
 </div>  
 
