--- a/camellia espresso/teashop.html
+++ b/camellia espresso/teashop.html
@@ -45,7 +45,7 @@
         </div>
 
 <div class="card">
-    <a href="image-link"><img src="img/LemonTea.jpg" alt="Green Tea"></a>
+    <a href="image-link"><img src="img/LemonTea.jpg" alt="Lemon Tea"></a>
 
         <div class="container">
             <h4><b>Lemon Tea</b></h4><br>
@@ -93,7 +93,7 @@
                     <div class="container">
                         <h4><b>Chamomile Tea</b></h4><br>
                         <p>LKR 350.00</p><br>
-                        <p class="font">Chamomile or camomile is the common name for several daisy-like plants of the family Asteraceae. Two of the species are commonly used to make herbal infusions for traditional medicine, although there is no evidence that chamomile has any effect on health or diseases.
+                        <p class="font">Chamomile or camomile is the common name for several daisy-like plants of the family Asteraceae. Two of the species are commonly used to make herbal infusions for traditional medicine, chamomile has effect on weight loss.
                         </p><br>
                     </div>
         </div>
@@ -103,7 +103,7 @@
                 
                     <div class="container">
                         <h4><b>Chrysanthemum Tea</b></h4><br>
-                        <p>LKR .00</p><br>
+                        <p>LKR 250.00</p><br>
                         <p class="font">Chrysanthemum tea is a flower-based infusion beverage made from chrysanthemum flowers of the species Chrysanthemum morifolium or Chrysanthemum indicum, which are most popular in East Asia, especially China.<br><br><br>
                         </p><br>
                     </div>
