--- a/camellia espresso/coffeeshop.html
+++ b/camellia espresso/coffeeshop.html
@@ -7,7 +7,7 @@
     <title>Coffee Shop</title>
     <link  rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/suchith.css">
-    <link rel="stylesheet" href="css/shop.css"><br><br>
+    <link rel="stylesheet" href="css/shop.css"><br>
     <h1 style="color:rgb(186, 102, 12)" align="Center"><font face="Verdana"<>WELCOME   TO  CAMELLIA ESPRESSO CAFE</font></h1>
       <hr>
       <marquee> <b> <i><h2 style="color:rgb(243, 193, 11)">A Cafe like no other</h2></i> </b> </marquee>
