--- a/camellia espresso/quiz.html
+++ b/camellia espresso/quiz.html
@@ -171,7 +171,7 @@
     <section id="beauty">
 
             <div class="card">
-                    <a href="image-link"><img src="img/mor.jpg" alt="Chamomile Tea"></a>
+                    <a href="image-link"><img src="img/mori.png" alt="Moringa Tea"></a>
                     
                     <div class="container" style="background-color:rgba(255, 255, 0, 0.2)">
                             <h4><b>Moringa Tea</b></h4><br>
