--- a/camellia espresso/online.html
+++ b/camellia espresso/online.html
@@ -9,19 +9,15 @@
 </head>
 <body id="online" background="img/spiral.gif">
     <header>
-        <nav class="navbar">
-            <a class="n_o" href="index.html">Home</a>
+        <nav class="navbar" >
+            <a class="n_o"href="index.html">Home</a>
+            <a class="n_o"href="cafe.html">Café</a>
             <a class="home"href="online.html">Online Order</a>
-            <a class="n_o"href="quiz.html">Quiz</a>
-            <a class="n_o"href="About.html">About Us</a>
+            <a class="n_o"href="quiz.html">Medical Approach</a>
         </nav>
      
     </header>
     <content>
-             <div class="top">
-                                <div id="layer1" style="position: absolute; width: 426px; height: 275px; z-index: 1; left: 488px; top: 50px">
-                                    <center><strong>Camellia<br>Espresso</strong></div></center>
-                            </div><br><br><br>
 
         <div class="gallery" style="padding-top: 150px; padding-left: 30px;">
             <a target="_blank" href="teasell.html">
