--- a/camellia espresso/quiz.html
+++ b/camellia espresso/quiz.html
@@ -11,15 +11,16 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
-            <a class="n_o" href="index.html">Home</a>
+        <nav class="navbar" >
+            <a class="n_o"href="index.html">Home</a>
+            <a class="n_o"href="cafe.html">Café</a>
             <a class="n_o"href="online.html">Online Order</a>
-            <a class="home"href="quiz.html">Quiz</a>
-            <a class="n_o"href="About.html">About Us</a>
+            <a class="home"href="quiz.html">Medical Approach</a>
         </nav>
         
     </header>
-    <form class="box"> 
+    <center><h2 style="margin-top: 30px;color: yellow;font-size: 36pt;">Tea as Remedies</center>
+        <form class="box"> 
         <input type="checkbox" id="bp" onclick="blood()">&nbsp High Blood Pressure</input><br>
         <input type="checkbox" id="db" onclick="sugar()">&nbsp Diabetes</input><br>
         <input type="checkbox" id="wl" onclick="weight()">&nbsp Obesity and Cholesterol</input><br>
