--- a/camellia espresso/teashop.html
+++ b/camellia espresso/teashop.html
@@ -17,7 +17,7 @@
     <header >
             
         <nav class="navbar" >
-            <a class="n_o"href="index.html">Home</a>
+            <a class="n_o"href="cafe.html">Café</a>
             <a class="n_o"href="coffeeshop.html">Coffee</a>
             <a class="home"href="teashop.html">Tea</a>
         </nav>
