--- a/camellia espresso/coffeesell.html
+++ b/camellia espresso/coffeesell.html
@@ -10,12 +10,12 @@
 </head>
 <body background="img/456.jpg">
     <header>
-            <nav class="navbar">
-                <a class="n_o" href="index.html">Home</a>
-                <a class="home"href="online.html">Online Order</a>
-                <a class="n_o"href="quiz.html">Quiz</a>
-                <a class="n_o"href="About.html">About Us</a>
-            </nav>
+            <nav class="navbar" >
+            <a class="n_o"href="index.html">Home</a>
+            <a class="n_o"href="cafe.html">Café</a>
+            <a class="home"href="online.html">Online Order</a>
+            <a class="n_o"href="quiz.html">Medical Approach</a>
+        </nav>
          
         </header>
         <center><video class="x" autoplay muted loop height="500px">
