--- a/camellia espresso/teasell.html
+++ b/camellia espresso/teasell.html
@@ -10,12 +10,12 @@
 </head>
 <body background="img/Nuwara.jpg">
         <header>
-                <nav class="navbar">
-                    <a class="n_o" href="index.html">Home</a>
-                    <a class="home"href="online.html">Online Order</a>
-                    <a class="n_o"href="quiz.html">Quiz</a>
-                    <a class="n_o"href="About.html">About Us</a>
-                </nav>
+                <nav class="navbar" >
+            <a class="n_o"href="index.html">Home</a>
+            <a class="n_o"href="cafe.html">Café</a>
+            <a class="home"href="online.html">Online Order</a>
+            <a class="n_o"href="quiz.html">Medical Approach</a>
+        </nav>
              
             </header>
 	<center><h1 id="layer2">Camellia Espresso Tea Collection</h1></center>
