--- a/camellia espresso/quiz.html
+++ b/camellia espresso/quiz.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Medical Approach</title>
     <link  rel="stylesheet" href="css/main.css">
     <link  rel="stylesheet" href="css/quiz.css">
     <script src="js/quiz.js"></script>
 </head>
-<body>
+<body background="img/he.jpg">
     <header>
         <nav class="navbar" >
             <a class="n_o"href="index.html">Home</a>
@@ -19,15 +19,15 @@
         </nav>
         
     </header>
-    <center><h2 style="margin-top: 30px;color: yellow;font-size: 36pt;">Tea as Remedies</center>
-        <form class="box"> 
-        <input type="checkbox" id="bp" onclick="blood()">&nbsp High Blood Pressure</input><br>
-        <input type="checkbox" id="db" onclick="sugar()">&nbsp Diabetes</input><br>
-        <input type="checkbox" id="wl" onclick="weight()">&nbsp Obesity and Cholesterol</input><br>
-        <input type="checkbox" id="cc" onclick="cancer()">&nbsp Cancer</input><br>
-        <input type="checkbox" id="bt" onclick="beauty()">&nbsp Skin diseases & Beauty</input><br>
-
-    </form>
+    <center><h2 style="margin-top: 30px;color: rgb(94, 255, 0);font-size: 36pt;">Tea as Remedies</center>
+        <form class="box" style="padding-bottom: 40px;"> 
+            <input type="checkbox" id="bp" onclick="blood()"><b>&nbsp; High Blood Pressure</b><br>
+            <input type="checkbox" id="db" onclick="sugar()"><b>&nbsp; Diabetes</b><br>
+            <input type="checkbox" id="wl" onclick="weight()"><b>&nbsp; Obesity and Cholesterol</b><br>
+            <input type="checkbox" id="cc" onclick="cancer()"><b>&nbsp; Cancer</b><br>
+            <input type="checkbox" id="bt" onclick="beauty()"><b>&nbsp; Skin diseases &amp; Beauty</b><br>
+            <input type="submit" value="Reset" style="margin-left: 250px;padding-left: 10px;padding-top: 2px;padding-right: 10px;padding-bottom: 2px;">
+        </form>
         
     <div class="wrap">
     <section id="blood">
