--- a/camellia espresso/php/check.html
+++ b/camellia espresso/php/check.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/php.css">
 </head>
-<body style="background-image: url('img/login.gif')"> 
-    <h1 style="font-size: 36pt; color: blueviolet;text-align: center;" >Signup or Login</h1><br><br>
+<body background="../img/deep.gif"> 
+    <h1 style="font-size: 36pt; color:crimson;text-align: center;">Signup or Login</h1><br><br>
     <a href="index.php"><button class="sign" style="vertical-align:middle;margin-left: 500px;"><span>Sign Up</span></button></a>
     <a href="login.php"><button class="sign2" style="vertical-align:middle"><span>Log In</span></button></a>
 </body>
