--- a/camellia espresso/quiz.html
+++ b/camellia espresso/quiz.html
@@ -9,7 +9,7 @@
     <link  rel="stylesheet" href="css/quiz.css">
     <script src="js/quiz.js"></script>
 </head>
-<body background="img/he.jpg">
+<body background="img/suchi/dd.jpg">
     <header>
         <nav class="navbar" >
             <a class="n_o"href="index.html">Home</a>
@@ -19,14 +19,14 @@
         </nav>
         
     </header>
-    <center><h2 style="margin-top: 30px;color: rgb(94, 255, 0);font-size: 36pt;">Tea as Remedies</center>
-        <form class="box" style="padding-bottom: 40px;"> 
+    <center><h2 style="margin-top: 30px;color: rgb(94, 255, 0);font-size: 36pt; color: cornsilk">Tea as Remedies</center>
+        <form class="box" style="padding-bottom: 40px; background-color: black; color: aliceblue"> 
             <input type="checkbox" id="bp" onclick="blood()"><b>&nbsp; High Blood Pressure</b><br>
             <input type="checkbox" id="db" onclick="sugar()"><b>&nbsp; Diabetes</b><br>
             <input type="checkbox" id="wl" onclick="weight()"><b>&nbsp; Obesity and Cholesterol</b><br>
             <input type="checkbox" id="cc" onclick="cancer()"><b>&nbsp; Cancer</b><br>
             <input type="checkbox" id="bt" onclick="beauty()"><b>&nbsp; Skin diseases &amp; Beauty</b><br>
-            <input type="submit" value="Reset" style="margin-left: 250px;padding-left: 10px;padding-top: 2px;padding-right: 10px;padding-bottom: 2px;">
+            <input type="submit" value="Reset" style=" background-color: white; font-weight: bold; margin-left: 250px;padding-left: 10px;padding-top: 2px;padding-right: 10px;padding-bottom: 2px;">
         </form>
         
     <div class="wrap">
