--- a/camellia espresso/cafe.html
+++ b/camellia espresso/cafe.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Café</title>
 	<link  rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/shop.css">
