--- a/camellia espresso/php/check.html
+++ b/camellia espresso/php/check.html
@@ -7,9 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/php.css">
 </head>
-<body background="../img/deep.gif"> 
-    <h1 style="font-size: 36pt; color:crimson;text-align: center;">Signup or Login</h1><br><br>
-    <a href="index.php"><button class="sign" style="vertical-align:middle;margin-left: 500px;"><span>Sign Up</span></button></a>
-    <a href="login.php"><button class="sign2" style="vertical-align:middle"><span>Log In</span></button></a>
+<body background="../img/suchi/americano2.jpg"> 
+    <h1 style="font-size: 36pt; color:lavender;text-align: center;margin-top: 50px;width: 450px;margin-left: 450px;">Signup or Login</h1><br><br>
+    <a href="index.php"><button class="sign" style="vertical-align:middle;margin-left: 475px; background-color: rgba(0,0,0,0.8)"><span>Sign Up</span></button></a>
+    <a href="login.php"><button class="sign2" style="vertical-align:middle; background-color: rgba(0,0,0,0.8)"><span>Log In</span></button></a>
 </body>
 </html>
